Chrome Scrollbar bug fix

--- a/app/components/nav/nav.module.css
+++ b/app/components/nav/nav.module.css
@@ -1,4 +1,5 @@
 .nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   padding-top: 1rem;
@@ -6,5 +7,5 @@
 }
 
 .navLink {
-  margin-left: 1rem;
+  padding-left: 1rem;
 }
