--- a/app/global.css
+++ b/app/global.css
@@ -33,6 +33,7 @@
 
 html {
   min-width: 360px;
+  scrollbar-gutter: stable both-edges;
 }
 
 html,
@@ -111,7 +112,6 @@ main {
     width: 700px;
     max-width: 700px;
     margin: 0 auto;
-    /* padding: 0; */
   }
 }
 
